# vcd_rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: dumped_var.rs  dumped_var_parser.rs  error.rs  lib.rs  parser.rs  state_machine.rs  string_helpers.rs  string_utils.rs  types.rs  vcd.rs
src/error/: marker.rs
src/parser/: vcd_parser.rs
src/parser/vcd_parser/: command_parser.rs  definitions_parser.rs
src/types/: dumped_var.rs  logical_value.rs  scope.rs  timescale.rs  variable.rs  vcd_variable.rs
tests/: file_parsing_integration_test.rs  no_vardump.golden.vcd
