[package]
name = "vcd_rust"
version = "0.1.0"
authors = ["Sean McLoughlin <smclough@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A value change dump parser for the Rust programming language"
repository = "https://github.com/SeanMcLoughlin/vcd-rust"
readme = "README.md"
keywords = ["hardware", "eda", "vcd", "fpga", "hdl"]
categories = ["libraries", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
strum = "0.19"
strum_macros = "0.19"
thiserror = "1.0"
